Refactored navbar logic and fixed My Conundrums button text misplacement on small screens.

--- a/css/browse.css
+++ b/css/browse.css
@@ -101,15 +101,6 @@ p {
   padding: 15px;
 }
 
-a {
-  color: #000000;
-  text-align: center;
-}
-
-a:hover {
-  color: #000000;
-}
-
 h1 {
   text-align: center;
   padding: 30px;
@@ -120,34 +111,7 @@ h2 {
   padding: 30px;
 }
 
-.container-fluid {
-  overflow: hidden;
-}
-
 .container {
   overflow: hidden;
   text-align: center;
 }
-
-.headerButton {
-  background-color: #000000;
-  float: left;
-  outline: none;
-  cursor: pointer;
-  padding-top: 25px;
-  padding-bottom: 25px;
-  transition: 0.3s;
-  font-family: 'Abril Fatface', cursive;
-  font-size: 20px;
-  color: #ffffff;
-}
-
-.headerButton:hover {
-  background-color: #395377;
-  color: #ffffff;
-  text-decoration: none;
-}
-
-.headerButton:active {
-  background-color: #395377;
-  }
