--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,3 +1,7 @@
+.container-fluid {
+    overflow: hidden;
+}
+
 /* navWrapper and navbar must always have the same height */
 .navWrapper {
     height: 80px;
@@ -11,4 +15,104 @@
     position: fixed;
     top: 0;
     z-index: 50;
+}
+
+.conunButton {
+    padding: 25px;
+}
+
+.headerButton {
+    text-align: center;
+    background-color: #000000;
+    float: left;
+    outline: none;
+    cursor: pointer;
+    padding: 25px;
+    height: 100px;
+    font-family: 'Abril Fatface', cursive;
+    font-size: 20px;
+    color: #ffffff;
+}
+
+.headerButton:hover {
+    background-color: #395377;
+    color: #ffffff;
+    text-decoration: none;
+}
+
+.headerButton:active {
+    background-color: #395377;
+}
+
+/* Change styles for the My Conundrums button for screen widths less than 725px */
+@media screen and (max-width: 725px) {
+    .conunButton {
+        padding: 10px;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+}
+
+.topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.topnav .icon {
+    display: none;
+}
+
+@media screen and (max-width: 600px) {
+    .topnav a:not(:first-child) {display: none;}
+    .topnav a.icon {
+        float: right;
+        display: block;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
 }
