--- a/css/room.css
+++ b/css/room.css
@@ -181,6 +181,42 @@ button:hover {
     animation: animatezoom 0.6s
 }
 
+li {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+p {
+    text-align: center;
+    padding: 15px;
+}
+
+h1 {
+    text-align: center;
+    padding: 30px;
+}
+
+h2 {
+    text-align: center;
+    padding: 30px;
+}
+
+.container {
+    overflow: hidden;
+    text-align: center;
+    padding: 16px;
+    position: relative;
+}
+
+.title {
+    display: inline-block;
+    width: 100%;
+    background-color: #42ebf4;
+    text-align: center;
+    margin: auto;
+}
+
 @-webkit-keyframes animatezoom {
     from {-webkit-transform: scale(0)}
     to {-webkit-transform: scale(1)}
@@ -220,72 +256,4 @@ button:hover {
     .puzzleIconsDiv {
         right: 10%;
     }
-}
-
-li {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-p {
-  text-align: center;
-  padding: 15px;
-}
-
-a {
-  color: #000000;
-  text-align: center;
-}
-
-a:hover {
-  color: #000000;
-}
-
-h1 {
-  text-align: center;
-  padding: 30px;
-}
-
-h2 {
-  text-align: center;
-  padding: 30px;
-}
-
-.container-fluid {
-  overflow: hidden;
-}
-
-.container {
-    overflow: hidden;
-    text-align: center;
-    padding: 16px;
-    position: relative;
-}
-
-.headerButton {
-  background-color: #000000;
-  float: left;
-  outline: none;
-  cursor: pointer;
-  padding-top: 25px;
-  padding-bottom: 25px;
-  transition: 0.3s;
-  font-family: 'Abril Fatface', cursive;
-  font-size: 20px;
-  color: #ffffff;
-}
-
-.headerButton:hover {
-  background-color: #395377;
-  color: #ffffff;
-  text-decoration: none;
-}
-
-.title {
-    display: inline-block;
-    width: 100%;
-    background-color: #42ebf4;
-    text-align: center;
-    margin: auto;
 }
